- secure settings pane
- fix for TV/Movies STRM generation
- implemented search function
- redirect dialogs to screen
- fixup settings pane "autocomplete"ing the fields
- hide settings that only pertain to kodi
- enable settings
- implemented: configuring your plugin settings #13
- fix audio playback
- add [switch to photos] context switch
- add sorting for encrypted items
- fully working encryption streaming playback including on MAC/iOS
- crypto support
v0.1.3 (2017-11-24)
- add parameters keyvalue (generate kv parameter representing the encrypted parameters passed in) and hide (to sumpress displaying the decrypted parameters)
- add duration and resolution
- added thumbnail support
v0.1.2 (2017-11-22)
- fix stability issue (related to query parameters not reloading correctly between navigations
v0.1.1 (2017-11-19)
- fix never_stream = true
- add support for secure login for /, /list, /kill (to enable, run dbm_setup.py ./gdrive.db username username_to_create and run dbm_setup.py ./gdrive.db password password_to_use)
- add "passthrough" mode (to enable, run dbm_setup.py ./gdrive.db passthrough true)
- start work on settings
- decode language codes into strings
v0.1.0 (2017-11-18)
- first alpha release for testing